# Akids-Enterpise

./: .env  .gitignore  .vercelignore  README.md  context.md  db.sqlite3  homepage1.html  index.html  indoor.html  outdoor.html  package-lock.json  package.json  parts.html  pyproject.toml  requirements.txt  rf-sports.html  tailwind.config.js  vercel.json
.mimocode/plans/: 1784871745435-playful-star.md
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/cart/: context_processors.py  urls.py  utils.py  views.py
apps/core/: urls.py  views.py
apps/orders/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
apps/products/: admin.py  api_urls.py  api_views.py  models.py  urls.py  views.py
backend/: manage.py
backend/little_fingers/: asgi.py  middleware.py  settings.py  wsgi.py
backend/products/: admin.py  middleware.py  models.py  pdf_generator.py  search.py  test_inquiries.py  test_orders.py  tests.py  urls.py  views.py
config/: settings.py  urls.py  wsgi.py
css/: catalogue.css  home.css
data/: _debug_ind_raw.txt  _debug_out_raw.txt  _debug_prt_raw.txt  indoor.js  outdoor.js  parts.js
frontend/templates/: 404.html  base.html
js/: catalogue.js
little_fingers/little_fingers/: settings.py  urls.py  wsgi.py
little_fingers/products/: urls.py
little_fingers/templates/: base.html
static/css/: accounts.css  cart.css  main.css  orders.css
templates/: base.html
tmp_extraction/: analyze_catalogue.py  analyze_remaining_pages.py  apply_lazyload.py  check_db.py  extract_indoor_pdf.py  group_variants.py  seed_indoor_products.py
(+82 files in other folders)
