[project]
name = "akids-enterprise"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Django>=6.0.5",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "pillow>=12.2.0",
    "requests>=2.33.0",
    "whitenoise>=6.11.0",
    "gunicorn>=25.1.0",
]

[tool.vercel.scripts]
build = "cd backend && python manage.py migrate --noinput"
